# MochaGen-Assembler

./: .gitignore  CMakeLists.txt  LICENSE  README-template.md  README.md
.github/workflows/: cmake-multi-platform.yml
old/src/: main.cpp
old/test/: number.json
output/: number.cpp
src/: CMakeLists.txt  assembler  assembler.cpp  assembler.hpp  default.cpp  main.cpp
src/array/: CMakeLists.txt  array.cpp  array.hpp  mcg_array.cpp
src/assembler/: CMakeLists.txt  Makefile  assembler.h  cmake_install.cmake
src/geometry/: CMakeLists.txt  geometry.cpp  geometry.hpp
src/graph/: CMakeLists.txt  graph.cpp  graph.hpp
src/jngen/: CMakeLists.txt  jngen.cpp  jngen.hpp
src/number/: CMakeLists.txt  number.cpp  number.hpp
src/string/: CMakeLists.txt  mcg_string.cpp  mcg_string.hpp  string.cpp  string.hpp
src/tree/: CMakeLists.txt  tree.cpp  tree.hpp
test/: .number.json.swp  number.json  number.sh
